cmake_minimum_required(VERSION 3.6)
project(code_dojo_c)

set(CMAKE_CXX_STANDARD 11)

set(HELLO_WORLD_SRC hello-world/hello.c)
set(FAHRENHEIT_SRC fahrenheit-celsius-table/fc_table.c)
set(STEP1 course/01_structure_of_a_program.c)
set(STEP2 course/02_data_types.c)
set(STEP3 course/03_if_statements.c)
set(STEP4 course/04_case_statements.c)
set(STEP5 course/05_while_statements.c)
set(STEP6 course/06_functions.c)
set(STEP7 course/07_storage_class.c)
set(STEP8 course/08_preprocessor_dir.c)
set(STEP9 course/09_common_io.c)
set(STEP10 course/10_file_io.c)
set(STEP11 course/11_bitwise_ops.c)
set(STEP12 course/12_structs.c)

add_executable(hello_world ${HELLO_WORLD_SRC})
add_executable(fahrenheit-celsius-table ${FAHRENHEIT_SRC})
add_executable(01_structure_of_a_program ${STEP1})
add_executable(02_data_types ${STEP2})
add_executable(03_if_statements ${STEP3})
add_executable(04_case_statements ${STEP4})
add_executable(05_while_statements ${STEP5})
add_executable(06_functions ${STEP6})
add_executable(07_storage_classes ${STEP7})
add_executable(08_preprocessor_dir ${STEP8})
add_executable(09_common_io ${STEP9})
add_executable(10_file_io ${STEP10})
add_executable(11_bitwise_ops ${STEP11})
add_executable(12_structs ${STEP12})